Added search feature & creating of employee in bunch
Created search GET Mapping in order to find all the employee based on the Request Param which can contain id, name, salary, joinedDate, department, position etc..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=employment-management
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/employment_db
 spring.datasource.username=your_username
-spring.datasource.password=your_pass
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
